[package]
name = "util"
version = "0.1.0"
authors = []

[dependencies]
toml = "0.4"
sha3 = { path = "sha3"}
bigint = { path = "bigint"}
rlp = { path = "rlp" }
serde = "1.0"
time = "0.1"
serde_derive = "1.0"
rustc-serialize = "0.3"
rand = "0.3"
serde_json = "1.0"
tiny-keccak= "1.0"
parking_lot = "0.4"
elastic-array = "0.9"
heapsize = "0.4"
itertools = "0.5"
log = "0.3"