[package]
description = "Large fixed-size integers and hash function outputs"
homepage = "http://parity.io"
repository = "https://github.com/paritytech/parity"
license = "MIT/Apache-2.0"
name = "bigint"
version = "0.1.3"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
serde = "=1.0.8"
rustc-serialize = "0.3"
heapsize = "0.4"
rand = "0.3"
byteorder = "1.0"
libc = "0.2"

[dev-dependencies]
serde_json = "1.0"

[features]
x64asm_arithmetic=[]
rust_arithmetic=[]
